addition spacing fixes youtube

--- a/style/_safari.scss
+++ b/style/_safari.scss
@@ -140,12 +140,13 @@
                 border-radius: 100%;
               }
               &-name {
-                margin-top: 15px;
+                margin-top: 22px;
                 p {
                   font-size: xx-small;
                 }
               }
               &-subscribe {
+                margin-top: 7px;
                 margin-left: 20px;
                 max-height: 35px;
                 min-width: 90px;
@@ -155,7 +156,7 @@
 
             }
             &-right {
-              margin-top: 30px;
+              transform: translate(0px, 30px);
 
               display: grid;
               grid-template-columns: 50px 10px 50px 10px 50px 10px;
@@ -185,6 +186,7 @@
       &-right {
         margin-left: 20px;
         margin-top: 20px;
+        margin-bottom: 10px;
         &-recommendations {
           &-list {
             &-video{
