--- a/style/main.css
+++ b/style/main.css
@@ -422,12 +422,13 @@
   border-radius: 100%;
 }
 .dockapps-safari-youtube-contents-left-details-channel-left-name {
-  margin-top: 15px;
+  margin-top: 22px;
 }
 .dockapps-safari-youtube-contents-left-details-channel-left-name p {
   font-size: xx-small;
 }
 .dockapps-safari-youtube-contents-left-details-channel-left-subscribe {
+  margin-top: 7px;
   margin-left: 20px;
   max-height: 35px;
   min-width: 90px;
@@ -435,7 +436,7 @@
   transform: translate(0px, 15px);
 }
 .dockapps-safari-youtube-contents-left-details-channel-right {
-  margin-top: 30px;
+  transform: translate(0px, 30px);
   display: grid;
   grid-template-columns: 50px 10px 50px 10px 50px 10px;
   margin-left: 80px;
@@ -457,6 +458,7 @@
 .dockapps-safari-youtube-contents-right {
   margin-left: 20px;
   margin-top: 20px;
+  margin-bottom: 10px;
 }
 .dockapps-safari-youtube-contents-right-recommendations-list-video {
   display: grid;
